--- a/styles/Timer.module.scss
+++ b/styles/Timer.module.scss
@@ -1,6 +1,8 @@
+@import './Vars.scss';
+
 .timer {
   //background-image: "./";
-  background-color: #f5f5f5;
+  background-color: $color--aqua;
   height: 100vh;
   width: 100vw;
   &__container {
@@ -33,6 +35,7 @@
     text-align: center;
     align-items: center;
     max-width: 400px;
+    color: white;
   }
 
   section p:first-child,
@@ -47,7 +50,6 @@
     &__container div:last-child {
       margin-left: 10px;
       margin-right: 10px;
-      //padding: 3em 1em;
     }
   }
 }
