--- a/styles/Timer.module.scss
+++ b/styles/Timer.module.scss
@@ -1,12 +1,20 @@
 @import './Vars.scss';
 
 .timer {
-  //background-image: "./";
+  .javi_Ramalama_container {
+    margin: 0 auto;
+    max-width: 300px;
+    margin-top: 10px;
+    span {
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      border-radius: 3px;
+      overflow: hidden;
+    }
+  }
   background-color: $color--aqua;
   height: 100vh;
   width: 100vw;
   &__container {
-    background-color: (rgba(0, 0, 0, 0.5));
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,12 +25,6 @@
   &__container div:first-child {
     text-align: center;
     color: white;
-  }
-  &__icon {
-    font-size: 100px;
-  }
-  &__container div:first-child p {
-    color: #f8f8f8;
   }
 
   &__container div:last-child {
@@ -48,6 +50,7 @@
 
 @media screen and (max-width: 480px) {
   .timer {
+    padding-top: 10px;
     &__container div:last-child {
       margin-left: 10px;
       margin-right: 10px;
