Pequeña mejora timer

--- a/styles/Timer.module.scss
+++ b/styles/Timer.module.scss
@@ -51,6 +51,7 @@
 @media screen and (max-width: 480px) {
   .timer {
     padding-top: 10px;
+    padding-bottom: 10px;
     &__container div:last-child {
       margin-left: 10px;
       margin-right: 10px;
